# kg-mcp

./: .env.yaml  .gitignore  Dockerfile  README.md  README.py  agent.py  bot.py  cloudbuild.yaml  curation_bot.py  ddtrace.config  instrumentation.py  knowledge_curation_tool.py  logger.py  logging_config.py  pyproject.toml  scout_report_agent.py  scout_report_schema.py  secrets.yaml  server.py  test_knowledge_curation_agent.py  test_rag_tool.py  test_scout_report.py  test_scout_report_agent.py  test_search_agent.py
.github/workflows/: pr-checks.yml
agent/: agent.py
knowledge_curation_agent/: main.py
scout_report_adk/: README.md  agent.py  parallel_scout_v5.py
scout_report_agent/: README_ADK.md  __init__.py  agent.py  brightdata_tools.py  citation_processor.py  comprehensive_scout_schema.py  extract_citations.py  extract_hudl_data.py  finish_message_parser.py  flexible_scout_schema.py  formatting_agent.py  gemini_rest_service.py  main.py  parallel_scout_agent.py  parallel_scout_v2.py  parallel_scout_v3.py  parallel_scout_v4.py  parallel_scout_v5.py  research_agent.py  scout_report_agent_single_call.py  scout_report_agent_structured.py  scout_report_function_schema.py  scout_report_schema.py  scout_report_service.py  simple_scout_schema.py  test_adk_grounding.py  test_citation_processing.py  test_formatter_input.py  test_function_calling.py  test_parallel_simple.py  test_parallel_v5.py  test_parallel_vs_serial.py  test_scout_agent.py  test_single_agent_grounding.py  test_single_with_schema.py  utils.py
search_agent/: agent.py
tests/: test_mcp.py  test_search_hudl_player.py
utils/: gcp_service_creds.py  logger.py  logs_with_request_context.py
(+12 files in other folders)
