[project]
name = "snapp-kg-mcp"
version = "0.1.0"
description = "KG MCP server with tools for scout report fetching and creation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "google-adk>=1.0.0",
    "google-genai==1.38.0",
    "google-cloud-storage>=2.19.0",
    "networkx>=3.5",
    "pydantic>=2.11.7",
    "python-dotenv==1.1.0",
    "thefuzz==0.22.1",
    "python-Levenshtein==0.25.1",
    "floggit>=0.0.19",
    "requests>=2.32.5",
    "pymongo>=4.15.3",
    "loguru>=0.7.3",
    "pytest-asyncio>=1.3.0",
    "bs4>=0.0.2",
    "aiohttp>=3.13.2",
    "poethepoet>=0.31.1",
    "ddgs>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.poe.tasks]
test = "doppler run --config stg --project kg -- pytest -v"
test_file = "doppler run --config stg --project kg -- pytest -v ${file}"
dev = "doppler run --config dev --project kg -- fastmcp run server.py --transport http --port 8001"
